# Uniquery

./: .gitignore  PROJECT_REPORT.md  README.md
backend/: .gitignore  chunker.py  clean_scraped_data_for_rag.json  debug_endpoint.py  document_chunks.jsonl  ingest.py  pyproject.toml  scraped_data_for_rag.json  scraper.py  scraper2.py  scraper3.py
backend/app/: main.py  rag_setup.py  tts_piper.py
backend/chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Chat.css  Chat.jsx
frontend/src/utils/: wav_utils.js
